<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="28dp"
        android:paddingTop="64dp"
        android:paddingRight="28dp"
        android:paddingBottom="32dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/settings"
            android:src="@drawable/ic_settings" />

        <com.upipe.app.views.NewPipeTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:gravity="center"
            android:text="@string/settings"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <com.upipe.app.views.NewPipeTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/settings_tab_summary"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/open_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/open_settings" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
